--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-scripts": "4.0.3",
+    "react-use-websocket": "^2.9.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
